Fix spacing of right-most fields.

--- a/style.scss
+++ b/style.scss
@@ -130,6 +130,7 @@ body {
 		width: 15%;
 
 		&--field {
+			padding-right: 0.25rem;
 			text-align: right;
 		}
 	}
@@ -244,6 +245,7 @@ body {
 			width: 15%;
 
 			&--field {
+				padding-right: 0.25rem;
 				text-align: right;
 				width: auto;
 			}
@@ -332,6 +334,7 @@ body {
 		}
 
 		&--field {
+			padding-right: 0.25rem;
 			text-align: right;
 		}
 	}
